# Pyre

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  WHITEPAPER.md  pyproject.toml  pyre-project-plan.docx  pyre-project-plan.md  pyre-technical-document.docx  pyre-technical-document.md  pyre-whitepaper.docx  pyre-whitepaper.md
.autoresearch/: whitepaper-claims-apr09-results.tsv  whitepaper-claims-apr09.md
.autoresearch/parallel/: current_variant.txt  test_variants.py
.github/workflows/: ci.yml
.plans/: 2026-04-10-fix-e2-batching-flow-control.md  2026-04-10-rewrite-whitepaper.md
docs/benchmarks/: phase1.md  phase1_results.json  pyre_self_benchmark_results.json  whitepaper_claim_matrix.md  whitepaper_validation.json  whitepaper_validation.md  whitepaper_validation_20260314T002609.json  whitepaper_validation_20260314T002609.md  whitepaper_validation_20260314T002805.json  whitepaper_validation_20260314T002805.md
docs/contracts/: bridge_python_elixir_contract.md
docs/packaging/: phase4.md
elixir/pyre_bridge/: README.md  mix.exs
elixir/pyre_bridge/config/: config.exs
elixir/pyre_bridge/lib/: pyre_bridge.ex
elixir/pyre_bridge/scripts/: start_bridge.exs
examples/: batching_usage.py  crewai_resilient.py  google_adk_resilient.py  langgraph_resilient.py  openai_agents_resilient.py  pydantic_ai_resilient.py  research_assistant.py  without_vs_with_pyre.py
examples/pyre_self_benchmark/: README.md  benchmark.py
examples/usage/: README.md  crewai_basic.py  google_adk_basic.py  langgraph_basic.py  openai_agents_basic.py  pydantic_ai_basic.py
scripts/: bench_bridge.py  bench_bridge_stress.py  bench_bridge_transports.py  convert_docx_to_md.py  generate_diagrams.py  package_smoke.py  release_gate.py  validate_whitepaper_claims.py
src/pyre_agents/: __init__.py  agent.py  cli.py  context.py  errors.py  ref.py  results.py  runtime.py  supervision.py  worker.py
src/pyre_agents/adapters/: __init__.py  crewai.py  google_adk.py  langgraph.py  openai_agents.py  pydantic_ai.py
src/pyre_agents/bridge/: __init__.py  batching.py  codec.py  framing.py  protocol.py  (+2 more)
tests/: test_bridge_codec.py  test_bridge_framing.py  test_bridge_integration.py  test_bridge_pool.py  test_bridge_protocol.py  test_cli.py  test_crewai_adapter.py  test_elixir_python_integration.py  test_examples_smoke.py  test_google_adk_adapter.py  test_graceful_shutdown.py  test_langgraph_adapter.py  test_langgraph_real_integration.py  test_openai_agents_adapter.py  test_phase2_lifecycle.py  test_phase3_supervision.py  test_preserve_state_on_restart.py  test_pydantic_ai_adapter.py  test_runtime_performance.py  test_smoke.py  test_whitepaper_validation.py
(+230 files in other folders)
