[project]
name = "pyre-agents"
version = "0.1.0"
description = "BEAM-powered agent framework for Python."
readme = "README.md"
license = "MIT"
keywords = ["agents", "asyncio", "beam", "elixir", "supervision"]
authors = [
    { name = "Arjun Kashyap", email = "arjuns062009@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "msgpack>=1.1.0",
    "pydantic>=2.11.0",
    "svgwrite>=1.4.3",
]

[project.optional-dependencies]
pydantic-ai = ["pydantic-ai>=1.0"]
crewai = ["crewai>=0.70"]
langgraph = ["langgraph>=0.2"]

[project.scripts]
pyre-agents = "pyre_agents.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["pyre_agents"]
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyre_agents"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pyre_agents",
    "/tests",
    "/scripts",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]
